2022-10-28T08:08:29Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3343855885 # 570
* notice: last 14d: unq all: 4 5601
* notice: prev accum: outdated-unq outdated-all / unq all: 1168 77573 / 1198 83219
* notice: next accum: outdated-unq outdated-all / unq all: 1168 77573 / 1200 83174
* notice: prev exec diff / last date diff / accum: unq all: +2 +139 -0 -184 / +2 +139 -0 -0 / 2 139
* notice: removed / changed dates: [] / [2022-10-14 2022-10-28]

2022-10-28T00:37:44Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3341921924 # 569
* notice: last 14d: unq all: 4 5646
* notice: prev accum: outdated-unq outdated-all / unq all: 1158 77153 / 1191 82727
* notice: next accum: outdated-unq outdated-all / unq all: 1168 77573 / 1198 83219
* notice: prev exec diff / last date diff / accum: unq all: +0 +149 -0 -11 / +2 +409 -0 -0 / 2 409
* notice: removed / changed dates: [2022-10-13] / [2022-10-14 2022-10-27]

2022-10-27T16:07:31Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3339043999 # 568
* notice: last 14d: unq all: 5 5574
* notice: prev accum: outdated-unq outdated-all / unq all: 1158 77153 / 1195 82759
* notice: next accum: outdated-unq outdated-all / unq all: 1158 77153 / 1191 82727
* notice: prev exec diff / last date diff / accum: unq all: +1 +122 -5 -154 / +2 +260 -0 -0 / 2 260
* notice: removed / changed dates: [] / [2022-10-13 2022-10-27]

2022-10-27T08:08:17Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3335624288 # 567
* notice: last 14d: unq all: 10 5606
* notice: prev accum: outdated-unq outdated-all / unq all: 1158 77153 / 1196 82804
* notice: next accum: outdated-unq outdated-all / unq all: 1158 77153 / 1195 82759
* notice: prev exec diff / last date diff / accum: unq all: +1 +138 -2 -183 / +1 +138 -0 -0 / 1 138