@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-10-28T08:08:29Z",
-  "count" : 208,
-  "count_minmax" : [ 137, 403 ],
-  "count_decinc" : [ -195, +403 ],
+  "timestamp" : "2022-10-28T16:07:03Z",
+  "count" : 64,
+  "count_minmax" : [ 64, 403 ],
+  "count_decinc" : [ -339, +403 ],
   "uniques" : 2,
   "uniques_minmax" : [ 2, 2 ],
   "uniques_decinc" : [ -0, +2 ]
