@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-10-28T08:08:29Z",
-  "count" : 139,
-  "count_minmax" : [ 139, 139 ],
-  "count_decinc" : [ -0, +139 ],
+  "timestamp" : "2022-10-28T16:07:03Z",
+  "count" : 261,
+  "count_minmax" : [ 139, 261 ],
+  "count_decinc" : [ -0, +261 ],
   "uniques" : 2,
   "uniques_minmax" : [ 2, 2 ],
   "uniques_decinc" : [ -0, +2 ]
