@@ -1,10 +1,10 @@
 {
-  "count": 5601,
+  "count": 5579,
   "uniques": 4,
   "clones": [
     {
       "timestamp": "2022-10-14T00:00:00Z",
-      "count": 208,
+      "count": 64,
       "uniques": 2
     },
     {
@@ -74,7 +74,7 @@
     },
     {
       "timestamp": "2022-10-28T00:00:00Z",
-      "count": 139,
+      "count": 261,
       "uniques": 2
     }
   ]
