@@ -1,3 +1,11 @@
+2022-10-28T16:07:03Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3346845275 # 571
+* notice: last 14d: unq all: 4 5579
+* notice: prev accum: outdated-unq outdated-all / unq all: 1168 77573 / 1200 83174
+* notice: next accum: outdated-unq outdated-all / unq all: 1168 77573 / 1200 83152
+* notice: prev exec diff / last date diff / accum: unq all: +0 +122 -0 -144 / +2 +261 -0 -0 / 2 261
+* notice: removed / changed dates: [] / [2022-10-14 2022-10-28]
+
 2022-10-28T08:08:29Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3343855885 # 570
 * notice: last 14d: unq all: 4 5601
